lib/tests/ui/invalid_version.stderr
error: argument to `version` must be either "1.0" or "2.0"
 --> $DIR/invalid_version.rs:1:33
  |
1 | #[jsonrpc_client::api(version = "blub")]
  |                                 ^^^^^^
